3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/spell_effect.c, include/global.h, common/init.c, server/init.c: Add 
    setting "create_home_portals" which allows server admins to allow town
    portals to be created in apartments. Based on a patch by pippijn in the
    cf-ext project.
lib/settings: Set default create_home_portals to FALSE
Alex Schultz 2006-07-12

lib/regions: Fix typo in region "portjoseph". Bug #1518392 (Port Joseph
   region spelling inconsistent with map directory) by Kevin R. Bulgrien.
Andreas Kirschbaum 2006-07-07

acinclude.m4, configure: Fix last fix which discarded any passed in
   CFLAGS or if that is set in the environment.
MSW 2006-07-05

common/button.c: Fix for sourceforge bug common/button.c - harpsicord crashes
   client.  The problem is that the trigger code presumed that the object
   would be animated, and blindly set teh face to the second animation frame.
   harpsicords are not animated, so this could amount to garbage.  So add
   check for trigger objects to see if they are in fact animated before
   blindly setting the face.
MSW 2006-07-05

server/daemon.c: Patch by wart, tracker 1489902 - open a file like /dev/null
   to then dup - this fixes -detach crash problem.  Might be better to use
   some other file, but in theory, shouldn't be much going here, and I
   don't think we can safely use a file that is already opened by the
   server.
MSW 2006-07-05

common/region.c: wrong order for memset call.
Ryo 2006-07-04

common/object.c: revert my previous fix, it's actually a feature :)
Ryo 2006-06-27

------------------------------------------------------------------------------
Changes for 1.9.1:
